--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
                     <span>opened everyday</span>
                     <span>9:00 - 20:00</span>
                 </p>
-                <div class="landing__next">
+                <a href="#abouts" class="landing__next">
                     <img src="img/arrow-down-big.svg" alt="">
-                </div>
-                <div class="landing__next--mobile">
+                </a>
+                <a href="#abouts" class="landing__next--mobile">
                     <img src="img/arrow-down-mobile.svg" alt="">
-                </div>
+                </a>
             </div>
             <div class="landing__right">
                 <img src="img/main-screen.jpg" alt="">
